# awful_text_news

./: Awful_News_Llama_A100.ipynb  Cargo.toml  README.md  config.yaml  news_parser.yaml
example_output/: 2025-05-06_evening.md
example_output/2025-05-06/: evening.json
src/: api.rs  cli.rs  main.rs  models.rs  utils.rs
src/outputs/: indexes.rs  json.rs  markdown.rs  mod.rs
src/scrapers/: aljazeera.rs  apnews.rs  bbcnews.rs  cnn.rs  mod.rs  npr.rs  nyt.rs  reuters.rs
template/: news_parser.yaml
