[package]
name = "awful_text_news"
version = "0.1.6"
edition = "2024"
authors = ["Thomas Gentry <thomas@awfulsec.com>"]
description = "Summarize newspaper articles from sources that publish text-only or lite versions of their stories."
license = "MIT"
repository = "https://github.com/graves/awful_text_news.git"
readme = "README.md"
homepage = "https://github.com/graves/awful_text_news"
keywords = ["openai", "qwen2.5", "cli", "markdown", "mdBook"]

[dependencies]
awful_aj = { version = "0.2.2", git = "https://github.com/graves/awful_aj" }
reqwest = { version = "*", features = ["rustls-tls"] }
scraper = "*"
url = "*"
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3.31"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
chrono = "0.4.41"
serde_yaml = "0.9.34"
clap = { version = "4.5.37", features = ["derive"] }
itertools = "0.14.0"
