[package]
name = "awful_text_news"
version = "0.1.20"
edition = "2024"
authors = ["Thomas Gentry <thomas@awfulsec.com>"]
description = "Summarize newspaper articles from sources that publish text-only or lite versions of their stories."
license = "MIT"
repository = "https://github.com/graves/awful_text_news.git"
readme = "README.md"
homepage = "https://github.com/graves/awful_text_news"
keywords = ["openai", "qwen", "cli", "markdown", "mdBook"]

[dependencies]
awful_aj = { version = "0.3.10", git = "https://github.com/graves/awful_aj" }
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3.31"
chrono = "0.4.42"
serde_yaml = "0.9.34-deprecated"
clap = { version = "4.5.51", features = ["derive"] }
itertools = "0.14.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.24", features = ["rustls-tls"] }
url = "2.5.7"
urlencoding = "2.1.3"
scraper = "0.24.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "time"] }
once_cell = "1.19"
regex = "1.12.2"
quick-xml = "0.38.3"
